# candle

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  print.html
lantern-datasets/: Cargo.toml  README.md
lantern-datasets/src/: batcher.rs  lib.rs
lantern-datasets/src/nlp/: tinystories.rs
lantern-datasets/src/vision/: cifar.rs  mnist.rs  mod.rs
lantern-examples/: Cargo.toml  README.md
lantern-examples/examples/: onnx_basics.rs
lantern-examples/examples/bert/: README.md  main.rs
lantern-examples/examples/bigcode/: README.md  main.rs
lantern-examples/examples/blip/: README.md  main.rs
lantern-examples/examples/chatglm/: main.rs
lantern-examples/examples/clip/: README.md  main.rs
lantern-examples/examples/convmixer/: main.rs
lantern-examples/examples/convnext/: README.md  main.rs
lantern-examples/examples/custom-ops/: main.rs
lantern-examples/examples/depth_anything_v2/: README.md  color_map.rs  main.rs
lantern-examples/examples/dinov2/: README.md  main.rs
lantern-examples/examples/dinov2reg4/: README.md  main.rs
lantern-examples/examples/distilbert/: README.md  main.rs
lantern-examples/examples/efficientnet/: main.rs
lantern-examples/examples/efficientvit/: README.md  main.rs
lantern-examples/examples/encodec/: README.md  main.rs
lantern-examples/examples/falcon/: README.md  main.rs
lantern-examples/examples/gemma/: README.md  main.rs
lantern-examples/examples/gte-qwen/: main.rs
lantern-examples/examples/jina-bert/: README.md  main.rs
lantern-examples/examples/llama/: main.rs
lantern-examples/examples/llama2-c/: main.rs  training.rs
lantern-examples/examples/llama_multiprocess/: main.rs  model.rs
lantern-examples/examples/llava/: image_processor.rs  main.rs  readme.md
lantern-examples/examples/mamba/: README.md  main.rs
lantern-examples/examples/mamba-minimal/: README.md  main.rs  model.rs
lantern-examples/examples/marian-mt/: README.md  main.rs
lantern-examples/examples/metavoice/: README.md  main.rs
lantern-examples/examples/mistral/: README.md  main.rs
lantern-examples/examples/mixtral/: README.md  main.rs
lantern-examples/examples/mnist-training/: main.rs
lantern-examples/examples/mobileone/: README.md  main.rs
lantern-examples/examples/moondream/: README.md  main.rs
lantern-examples/examples/musicgen/: main.rs  musicgen_model.rs
lantern-examples/examples/olmo/: README.md  main.rs
lantern-examples/examples/onnx/: README.md  main.rs
lantern-examples/examples/phi/: README.md  main.rs
lantern-examples/examples/quantized/: README.md  main.rs
lantern-examples/examples/quantized-phi/: main.rs
lantern-examples/examples/quantized-t5/: README.md  main.rs
lantern-examples/examples/qwen/: README.md  main.rs
lantern-examples/examples/recurrent-gemma/: README.md  main.rs
lantern-examples/examples/reinforcement-learning/: README.md  ddpg.rs  dqn.rs  gym_env.rs  main.rs  policy_gradient.rs  vec_gym_env.rs
lantern-examples/examples/replit-code/: README.md  main.rs
lantern-examples/examples/repvgg/: README.md  main.rs
lantern-examples/examples/resnet/: README.md  main.rs
lantern-examples/examples/rwkv/: README.md  main.rs
lantern-examples/examples/segformer/: README.md  main.rs
lantern-examples/examples/segment-anything/: README.md  main.rs
lantern-examples/examples/stable-diffusion/: README.md  main.rs
lantern-examples/examples/stable-lm/: README.md  main.rs
lantern-examples/examples/starcoder2/: main.rs
lantern-examples/examples/t5/: README.md  main.rs
lantern-examples/examples/trocr/: image_processor.rs  main.rs  readme.md
lantern-examples/examples/vgg/: README.md  main.rs
lantern-examples/examples/vit/: README.md  main.rs
lantern-examples/examples/whisper/: README.md  main.rs  multilingual.rs
lantern-examples/examples/whisper-microphone/: main.rs  multilingual.rs
lantern-examples/examples/wuerstchen/: README.md  main.rs
lantern-examples/examples/yi/: main.rs
lantern-examples/examples/yolo-v3/: darknet.rs  main.rs
lantern-examples/examples/yolo-v8/: README.md  main.rs  model.rs
lantern-examples/src/: audio.rs  imagenet.rs  lib.rs  token_output_stream.rs
lantern-flash-attn/: Cargo.toml  README.md  build.rs
lantern-flash-attn/src/: lib.rs
lantern-flash-attn/tests/: flash_attn_tests.rs
lantern-nn/: Cargo.toml  README.md
lantern-nn/benches/benchmarks/: conv.rs  layer_norm.rs  mod.rs
lantern-nn/examples/: basic_optimizer.rs  cpu_benchmarks.rs
lantern-nn/src/: activation.rs  batch_norm.rs  conv.rs  embedding.rs  encoding.rs  func.rs  group_norm.rs  init.rs  kv_cache.rs  layer_norm.rs  lib.rs  linear.rs  loss.rs  ops.rs  optim.rs  rnn.rs  rope.rs  rotary_emb.rs  sequential.rs  var_builder.rs  var_map.rs
lantern-nn/tests/: batch_norm.rs  group_norm.rs  layer_norm.rs  loss.rs  one_hot.rs  ops.rs  optim.rs  rnn.rs
lantern-pyo3/: Cargo.toml  README.md  e5.py  pyproject.toml  quant-llama.py  stub.py  test.py  test_pytorch.py
lantern-pyo3/_additional_typing/: README.md  __init__.py
lantern-pyo3/py_src/candle/: __init__.py  __init__.pyi
lantern-pyo3/src/: lib.rs  onnx.rs  shape.rs  utils.rs
lantern-pyo3/tests/bindings/: test_linear.py  test_module.py  test_testing.py
lantern-pyo3/tests/native/: test_shape.py  test_tensor.py  test_utils.py
lantern-transformers/: Cargo.toml  README.md
lantern-transformers/src/: quantized_nn.rs  quantized_var_builder.rs  utils.rs
lantern-transformers/src/generation/: mod.rs
lantern-transformers/src/models/: beit.rs  bert.rs  bigcode.rs  blip.rs  blip_text.rs  chatglm.rs  convmixer.rs  convnext.rs  depth_anything_v2.rs  dinov2.rs  dinov2reg4.rs  distilbert.rs  efficientnet.rs  efficientvit.rs  encodec.rs  eva2.rs  falcon.rs  gemma.rs  jina_bert.rs  llama.rs  llama2_c.rs  llama2_c_weights.rs  mamba.rs  marian.rs  metavoice.rs  mistral.rs  mixformer.rs  mixtral.rs  mobilenetv4.rs  mobileone.rs  mod.rs  moondream.rs  mpt.rs  olmo.rs  persimmon.rs  phi.rs  (+32 more)
lantern-transformers/tests/: generation_tests.rs
lantern-wasm-tests/: Cargo.toml
lantern-wasm-tests/tests/: quantized_tests.rs
(+258 files in other folders)
