[package]
name = "lantern-flash-attn"
version = "0.6.0"
edition = "2021"

description = "Flash attention layer for the lantern ML framework."
repository = "https://github.com/huggingface/lantern"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
lantern = { path = "../lantern-core", features = ["cuda"], package = "lantern-core", version = "0.6.0" }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
bindgen_cuda = "0.1.1"
anyhow = { version = "1", features = ["backtrace"] }


[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
lantern-nn = { path = "../lantern-nn", features = ["cuda"] }
