[package]
name = "lantern-pyo3"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "lantern"
crate-type = ["cdylib"]

[dependencies]
accelerate-src = { workspace = true, optional = true }
lantern = { workspace = true }
lantern-nn = { workspace = true }
lantern-onnx = { workspace = true, optional = true }
half = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py38"] }

[build-dependencies]
pyo3-build-config = "0.21"

[features]
default = []
accelerate = ["dep:accelerate-src", "lantern/accelerate"]
cuda = ["lantern/cuda"]
mkl = ["dep:intel-mkl-src","lantern/mkl"]
onnx = ["dep:lantern-onnx"]

