[project]
name = 'lantern-nn'
requires-python = '>=3.7'
authors = [
    {name = 'The lantern Team'},
]

dynamic = [
    'description',
    'license',
    'readme',
]

[project.urls]
Homepage = 'https://github.com/huggingface/lantern'
Source = 'https://github.com/huggingface/lantern'

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "py_src"
module-name = "lantern.lantern"
bindings = 'pyo3'
features = ["pyo3/extension-module"]

[tool.black]
line-length = 119
target-version = ['py35']

[project.optional-dependencies]
testing = ["pytest", "black==22.3"]
huggingface = ["transformers>=4.33.3", "huggingface-hub>=0.17.3"]