[package]
name = "lantern-transformers"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
lantern = { workspace = true }
lantern-flash-attn = { workspace = true, optional = true }
lantern-nn = { workspace = true }
fancy-regex = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
tracing = { workspace = true }

[features]
default = []
accelerate = ["dep:accelerate-src", "lantern/accelerate", "lantern-nn/accelerate"]
cuda = ["lantern/cuda", "lantern-nn/cuda"]
flash-attn = ["cuda", "dep:lantern-flash-attn"]
mkl = ["dep:intel-mkl-src", "lantern/mkl", "lantern-nn/mkl"]
metal = ["lantern/metal", "lantern-nn/metal"]
